page adopté faite !

--- a/ils-ont-trouve-une-famille.html
+++ b/ils-ont-trouve-une-famille.html
@@ -74,8 +74,166 @@
     </script>
     
     <div class="content">
-        <h1>Ils ont trouvé une famille</h1>
-        <p>Ceci est le contenu de la page</p>
+        <div class="famille_titre">
+            <div class="famille_titre_texte">
+                <h1>ILS ONT TROUVÉ <br> UNE FAMILLE</h1>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre famille_texte">
+            <h2><strong>
+                Après une période au refuge, ils ont été adoptés !
+                <br>
+                Nous leur souhaitons une longue et belle vie auprès de leurs nouvelles familles
+            </strong></h2>
+        </div>
+        <div class="espaceur50"></div>
+
+        <div class="grille-images">
+            <div class="carte">
+                <img src="images/rda(26).webp" >
+                <div class="overlay">
+                    <h3>Scar</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/rda(24).webp" >
+                <div class="overlay">
+                    <h3>Roqui</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/rda(23).webp" >
+                <div class="overlay">
+                    <h3>Fergus</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/rda(22).webp" >
+                <div class="overlay">
+                    <h3>Athéna</h3>
+                </div>
+            </div>
+        </div>
+        <div class="grille-images">
+            <div class="carte">
+                <img src="images/zzz (1).jpeg" >
+                <div class="overlay">
+                    <h3>Wifi</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (2).jpeg" >
+                <div class="overlay">
+                    <h3>Idefix</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (3).jpeg" >
+                <div class="overlay">
+                    <h3>Tank</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (4).jpeg" >
+                <div class="overlay">
+                    <h3>Natsu</h3>
+                </div>
+            </div>
+        </div>
+        <div class="grille-images">
+            <div class="carte">
+                <img src="images/zzz (5).jpeg" >
+                <div class="overlay">
+                    <h3>Princesse</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (6).jpeg" >
+                <div class="overlay">
+                    <h3>Roxie</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (7).jpeg" >
+                <div class="overlay">
+                    <h3>Clochette</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (8).jpeg" >
+                <div class="overlay">
+                    <h3>Choupie</h3>
+                </div>
+            </div>
+        </div>
+        <div class="grille-images">
+            <div class="carte">
+                <img src="images/zzz (9).jpeg" >
+                <div class="overlay">
+                    <h3>Rouqui</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (10).jpeg" >
+                <div class="overlay">
+                    <h3>Lady</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (11).jpeg" >
+                <div class="overlay">
+                    <h3>Violette</h3>
+                </div>
+            </div>
+
+            <div class="carte">
+                <img src="images/zzz (12).jpeg" >
+                <div class="overlay">
+                    <h3>Mimi</h3>
+                </div>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="logo">
