--- a/radeaudesanimaux.html
+++ b/radeaudesanimaux.html
@@ -139,10 +139,10 @@
                 Aidez-nous à leur venir en aide !
             </p>
             <br>
-            <a href="" class="btn_bleu"><strong>FAIRE UN DON</strong></a>
+            <a href="https://www.helloasso.com/associations/le-radeau-des-animaux/formulaires/3" class="btn_bleu"><strong>FAIRE UN DON</strong></a>
         </div>
         <div class="espaceur50"></div>
-        <div class="accueil_appel_benevolat bloc_centre">
+        <div class="accueil_appel_benevolat ">
             <div class="carousel"><!--Aide Chat GPT-->
 
                 <!-- Radios cachés -->
@@ -195,7 +195,7 @@
                 <br><br>
                 <p>Par avance, nous vous remercions de votre aide</p>
                 <br><br>
-                <a href="" class="btn_bleu"><strong>DEVENIR BÉNÉVOLE</strong></a>
+                <a href="https://www.radeaudesanimaux.fr/nous-aider1" class="btn_bleu"><strong>DEVENIR BÉNÉVOLE</strong></a>
             </div>
         </div>
         <div class="espaceur100"></div>
