--- a/temoignages-adoptants.html
+++ b/temoignages-adoptants.html
@@ -74,8 +74,84 @@
     </script>
     
     <div class="content">
-        <h1>Témoignages d'adoptants</h1>
-        <p>Ceci est le contenu de la page</p>
+        <div class="temoin_titre">
+            <div class="temoin_titre_texte">
+                <h1>TÉMOIGNAGE DES <br>ADOPTANTS</h1>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre temoin_texte">
+            <h2>Découvrez les témoignages de familles ayant adopté des animaux de notre refuge !</h2>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="temoin_textes ">
+            <div class="temoin_img_textes">
+                <img src="images/rda(35).webp">
+            </div>
+            <div class="temoignage_texte">
+                <h2>Voyou & Ruby</h2>
+                <br>
+                <p>
+                    "Nous avons adopté voyou et ruby au radeau des animaux de Ferel. Nous avons été très bien accueilli par les personnes du refuge. Visite à la maison pour être sur de nos adoptions ce qui est tout à fait normal car un animal c'est pour toute la vie. Pour voyou et Rubis la vie est belle et confortable beaucoup d amour dans les 2 sens.un réelle bonheur pour nos deux amour. Il faut beaucoup de patience pour eux car ils leur a fallu beaucoup de temps pour s adapter à leur nouvelle vie. A part ruby qui a mis moins de temps à se sentir chez elle. Merci au refuge de nous avoir fait confiance "
+                </p>
+            </div>
+        </div>
+        <div class="temoin_textes">
+            <div class="temoin_img_textes">
+                <img src="images/rda(38).webp" id="mairie">
+            </div>
+            <div class="temoignage_texte">
+                <h2>Thalia, Paco</h2>
+                <br><br>
+                <p>
+                    Lenny est un amour de "petit Pepére" qui adore les gros câlins, les voyages en camping-car, jouer et... le canapé.<br>
+                    Un précieux allié pour la socialisation des loulous accueillis à la maison .<br>
+                    Tous ces loulous, au passé difficile, profitent pleinement de cette deuxième vie heureuse auprès de familles qui les adorent, ils sont tellement attachants.<br>
+                    <br>
+                    Merci à ces généreuses familles et merci également à nos familles d'accueil, investies, déterminées et qui ne renoncent pas.
+                </p>
+            </div>
+        </div>
+        <div class="temoin_textes">
+            <div class="temoin_img_textes">
+                <img src="images/rda(37).webp" id="veto">
+            </div>
+            <div class="temoignage_texte">
+                <h2>Gigi</h2>
+                <br><br>
+                <p>
+                    Des nouvelles de Gigi, jeune chatte timide et réservée au refuge.
+                    Pour mémoire : Gigi, jeune chatte errante, est arrivée au refuge au mois de septembre 2024 avec ses minuscules chatons. Elle a été une maman très attentionnée, douce et patiente. Ses chatons ont tous été adoptés. Puis est venu son tour. Elle vit, actuellement, le parfait bonheur avec des maîtres qui l'adorent. "...Tout se passe très bien depuis le début de son adoption ... Elle est très gentille, toujours un peu coquine... Elle est très belle, un peu gourmande ...Elle est très heureuse de faire son petit tour à l'extérieur plusieurs fois par jour et est très obéissante pour rentrer à la maison... Nous l'aimons beaucoup et sommes très heureux avec elle ..."
+                </p>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="logo">
