qui sommes nous

--- a/qui-nous-sommes.html
+++ b/qui-nous-sommes.html
@@ -74,8 +74,133 @@
     </script>
     
     <div class="content">
-        <h1>Qui sommes nous ?</h1>
-        <p>Ceci est le contenu de la page</p>
+        <div class="qui_titre">
+            <div class="qui_titre_texte">
+                <h1>QUI SOMMES NOUS ?</h1>
+            </div>
+        </div>
+        <div class="bloc_centre qui_texte1">
+            <h2>La mission du Radeau des animaux</h2>
+            <br>
+            <h3>Le refuge "Le Radeau des animaux" est une association loi 1901, sans but lucratif.</h3>
+            <br>
+            <p>
+                Notre mission principale consiste à recueillir les animaux, chiens ou chats, abandonnés et/ou maltraités essentiellement sur le département du Morbihan (56), celui de la Loire-Atlantique (44), de Vannes à Nantes, ainsi que sur toute la presqu'île guérandaise.
+                <br><br>
+                Le but est ensuite de replacer les animaux dans des familles présentant les meilleures garanties pour assurer leur bonheur !
+                <br>
+                Les animaux restent au refuge jusqu'au jour de leur adoption, quelque soit le délai. Nous ne pratiquons aucune euthanasie de convenance.
+                <br>
+                Toutefois, nous prenons en charge exclusivement les animaux que nous pouvons réellement replacer. Si leur âge, leur état de santé ou leur comportement rend l'adoption trop problématique, nous orientons vers d'autres structures plus aptes à répondre à la situation.
+            </p>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre qui_texte2">
+            <img src="images/rda(39).jpeg">
+            <p>
+                Les animaux sont pris en charge par notre équipe de bénévoles, qui comptent environ une quarantaine de membres.
+                <br><br>
+                Ponctuellement, l'équipe des bénévoles est épaulée par des familles d'accueil.
+                Ces dernières prennent le relais concernant les chiens ou chats présentant des besoins spécifiques
+                <br><br>
+
+                Le refuge ne perçoit aucune subvention, aucun soutien financier, son fonctionnement est assuré exclusivement par :
+                <br>
+                → les dons<br>
+                → l'engagement et la bonne volonté de l'équipe de bénévoles.
+                <br><br>
+                Il n'y a aucun salarié parmi l'équipe du Radeau des animaux.
+            </p>
+        </div>
+        <div class="bloc_centre qui_texte3">
+            <p>
+                Le RADEAU DES ANIMAUX est membre de la Confédération Nationale de défense de l'animal qui fédère 260 refuges. 
+                <br>
+                Chaque refuge garde son autonomie de fonctionnement et sa totale indépendance juridique et financière. 
+                <br>
+                Le refuge s'engage alors à respecter l'éthique et les valeurs de la Confédération Nationale. 
+                <br>
+                L'adhésion à la Confédération Nationale des refuges permet à chaque structure locale d'avoir le soutien d'un réseau nationale en matière juridique, logistique, communication, etc...
+                <br>
+                Elle permet également de percevoir des legs.  
+            </p>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre qui_animaux">
+            <div class="qui_chat">
+                <img src="images/rda(34).webp">
+                <h3>Côté chat </h3>
+                <br><br>
+                <p>
+                    Le refuge propose 6 chatteries de tailles différentes, chacune disposant d'une cour extérieure, entièrement clôturée. 
+                    <br>
+                    Les chats ont libre accès à la cour par une chatière. 
+                </p>
+            </div>
+            <div class="qui_chien">
+                <img src="images/rda(33).webp">
+                <h3>Côté chien </h3>
+                <br>
+                <p>
+                    La partie hébergement des chiens est composée de 2 bâtiments aménagés à leur intention. 
+                    <br>
+                    Le premier chenil comporte 6 box confortables et carrelés. 
+                    <br>
+                    Le second chenil comporte 10 grands box ouvrant sur des courettes individuelles. 
+                    <br>
+                    Sur le second chenil, chaque box offre un espace de vie intérieur/extérieur de 40 m².
+                </p>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="qui_texte4">
+            <p>
+                C'est au coeur de la campagne bretonne, sur la commune de Férel (56) qu'est installé le refuge<br>
+                LE RADEAU DES ANIMAUX
+                <br><br>
+
+                Chiens et chats sont accueillis dans une ancienne ferme rénovée afin d'assurer leur bien-être.
+                <br>
+                Sur une superficie de plus de 18 000m², le refuge a implanté 4 vastes parcs de détente qui permettent aux chiens de s'ébattre en liberté tout au long de la journée.
+                <br><br>
+                La capacité d'accueil du refuge est la suivante :<br>
+                → 20 à 30 chats<br>
+                → 15 à 20 chiens<br>
+                <br>
+                Facile d'accès, le refuge se trouve à :<br>
+                → 20 minutes de Guérande (44)<br>
+                → 30 minutes de Vannes (56)<br>
+                → 40 minutes de Nantes (44)<br><br>
+            </p>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="logo">
