--- a/processus-adoption.html
+++ b/processus-adoption.html
@@ -74,8 +74,226 @@
     </script>
     
     <div class="content">
-        <h1>Processus d'adoption</h1>
-        <p>Ceci est le contenu de la page</p>
+        <div class="adopt_titre">
+            <div class="adopt_titre_texte">
+                <h1>VOUS SOUHAITEZ <br> ADOPTER?</h1>
+            </div>
+        </div>
+        <div class="espaceur50"></div>
+        <h2 class="h2centre">Le temps de la réflexion est indispensable !</h2>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/rda(36).webp">
+            <p><strong>
+                L'adoption est un acte lourd de sens et de conséquences.<br>
+                Il changera fondamentalement votre vie, ainsi que celle de l'animal que vous adoptez <br>
+                <br>
+                Avant toutes démarches d'adoption, il est donc impératif de se poser les bonnes questions <br>
+                <br>
+                Evaluez le coût d'entretien de l'animal </strong>
+                <br>
+                Alimentation, vermifuges, antiparasitaires, frais vétérinaires (vaccin, maladie, accidents...)<br>
+                Le coût est variable selon la taille, la race et l'âge de l'animal <br>
+                Si votre budget est un peu "serré", il est indispensable de faire un peu calcul préalable <br>
+            </p>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre adopt_2column">
+            <p>
+                <strong>Il faut également penser à l'organisation de vos absences</strong><br>
+                Sur votre temps de travail<br>
+                Lors d'un week-end ou pendant vos vacances <br>
+
+                Avec votre animal, vous devrez<strong> faire face à tous les changements de situation </strong>:<br>
+                <br>
+                Familiale <br>
+                Professionnelle <br>
+                Géographique ... <br>
+                <br><br>
+                <strong>L'adoption d'un animal doit se faire sur la vie</strong> <br>
+                Aussi, il vaut mieux reporter le projet d'adoption si votre situation financière ou personnelle est trop incertaine 
+            </p>
+            <img src="images/rda(20).webp">
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre adopt_text">
+            <h3>Quel animal choisir ?</h3>
+            <br>
+            <p>
+                Certes le choix d'un animal s'articule très souvent autour de son physique. 
+                <br>
+                Pour autant, vous devrez surtout prendre en compte la compatibilité entre son caractère et votre mode de vie. 
+                <br>
+                Un jeune chien vif et fougueux ne convient pas à une personne âgée, un chien très actif a besoin de maitres sportifs, certains chats ne supportent pas la vie en appartement...
+                <br>
+                Nous sommes là pour vous conseiller et vous guider dans votre choix. 
+                <br>
+                Nos conseils sont désintéressés, car nous n'avons aucun objectif commercial , mais seulement la volonté de faire le bonheur d'un animal et de ses adoptants 
+                <br><br>
+                Notre processus d'adoption se décline en 3 étapes et la décision est prise collectivement par l'équipe du refuge. 
+
+            </p>
+            <div class="espaceur100"></div>
+            <h2 class="or">L'adoption d'un chien : les trois étapes du processus</h2>
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/rda(23).webp">
+            <p>
+                <or><strong> 1 : Remplir le formulaire de demande d'adoption et le certificat d'engagement et de connaissances, chien</or></strong>
+                <br><br>
+                Vous venez de découvrir, sur notre site, un chien qui correspond à vos attentes. Si vous désirez l'adopter, vous devez, dans un premier temps, compléter les formulaires suivants :
+                <br><br>
+                <strong>
+                    -La demande d'adoption chien<br>
+                    -Le certificat d'engagement et de connaissances, chien<br>
+                </strong>
+                <br>
+                Le <or>formulaire de demande d'adoption</or> a pour but de mieux connaitre votre mode de vie, vos attentes, etc...<br>
+                Il convient donc de le compléter avec soins.<br>
+                Le <or>certificat d'engagement et de connaissances est un document obligatoire. </or>Il devra être validé, complété et signé par vos soins, avant toute adoption<br>
+            </p>
+        </div>
+        <div class="espaceur30"></div>
+        <div class="adopt_text bloc_centre">
+            <p>
+                Ces documents peuvent nous être remis en mains propres (au refuge sur les heures d'ouverture), mais aussi par mail ou par courrier postal (adresse : 35 rue de Quesquello 44500 LA BAULE).
+                <br><br>
+                <strong>
+                    À la réception des formulaires, l’équipe du Radeau prendra contact avec vous afin d’échanger et de rencontrer le chien du refuge.   
+                </strong>
+            </p>
+            <br><br>
+            <a href="" class="btn_orange">Certificat d'engagement</a>
+            <br><br>
+            <p><or>
+                En savoir plus sur le certificat d’engagement et de connaissances 
+            </or></p>
+            <br><br>
+            <a href="https://agriculture.gouv.fr/animaux-de-compagnie-equides-tout-savoir-sur-le-certificat-dengagement-et-de-connaissance" class="btn_orange">Cliquez ici</a>
+            <div class="espaceur100"></div>
+            <p>
+                <strong><or>Etape 2 : Visite de pré-adoption</or></strong>
+                <br><br>
+                Si vos conditions de vie semblent correspondre aux besoins et attentes du chien, une pré-visite sera effectuée à votre domicile, sur rendez-vous, par un membre de l'association.
+            </p>
+        </div>
+        <div class="espaceur100"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/rda(29).webp">
+            <p>
+                <strong><or>
+                    Etape 3 : Décision d'adoption
+                </or></strong><br>
+                <br>A ce stade du processus d'adoption, l'équipe du refuge se concerte afin de donner une réponse à la demande d'adoption; avec pour seul objectif, le bien-être et l'équilibre du chien à l'adoption.
+                <br>
+                <br>Si la réponse est positive, vous pourrez revenir au refuge, afin de finaliser le contrat d'adoption.
+                <br>Vous devrez fournir les photocopies des justificatifs suivants :
+                <br>
+                <br>Pièce d'identité
+                <br>Justificatif de domicile
+                <br>Règlement des frais d'adoption
+                <br>
+                <br>Si vous avez déjà un chien, il est impératif de faire les présentations, afin de s'assurer de la bonne entente des animaux.
+                <br>Adopter un animal est un engagement à long terme, il est donc impératif que tous les membres de la famille approuvent cette démarche, animaux compris.
+
+
+            </p>
+        </div>
+        <div class="espaceur30"></div>
+        <div class="adopt_text bloc_centre">
+            <p>
+                Après l'adoption, aucun remboursement ne pourra être effectué;  l'intégralité des sommes étant destinée au fonctionnement du refuge et à l'entretien des animaux hébergés.
+                <br>Si vous adoptez un chiot, la stérilisation est obligatoire entre l'âge de 6 mois et 1 an. Elle est à la charge de l'adoptant.
+                <br>L'objectif est de limiter la reproduction afin de réduire le nombre d'animaux abandonnés
+            </p>
+        </div>
+        <div class="espaceur50"></div>
+        <h2 class="or h2centre">L'adoption d'un chat : les deux étapes du processus</h2>
+        <div class="espaceur50"></div>
+        <img src="images/rda (8).webp" class="adopt_img_large bloc_centre">
+        <div class="adopt_text bloc_centre">
+            <p>
+                Adopter un chat
+                <br><br>
+                Vous pouvez venir voir nos chats au refuge, et prendre contact avec eux dans la chatterie. 
+                <br><br>
+                Cette rencontre vous aidera à choisir celui qui partagera votre vie. 
+                <br><br>
+                Certains chats ont absolument besoin d'avoir un jardin, et ne seront pas confiés aux personnes vivant en appartement
+                <br><br>
+                Les chats âgés de plus de 6 mois sont testés FIV et FELV, identifiés par puce électronique, vaccinés et stérilisés
+                <br>
+
+            </p>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre adopt_2column">
+            <p>
+                <strong><or>Etape 1 : Remplir le formulaire de demande d'adoption et le certificat d'engagement et de connaissances, chat </strong></or>
+                <br>
+                Vous venez de découvrir, sur notre, un chat qui correspond à vos attentes. <br>Si vous désirez l'adopter, vous devez, dans un premier temps, compléter les formulaires suivants :
+                <br><br>
+                -La demande d'adoption chat<br>
+                -Le certificat d'engagement et de connaissances, chat
+                <br><br>
+                <or>Le formulaire de demande d'adoption</or> a pour but de mieux connaitre votre mode de vie, vos attentes, etc...<br>
+                Il convient donc de le compléter avec soins
+                <br><br>
+                <or>Le certificat d'engagement et de connaissances est un document obligatoire</or>. Il devra être validé, complété et signé par vos soins avant toute adoption.
+
+
+            </p>
+            <img src="images/rda(22).webp">
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_text">
+            <p>
+                Ces documents peuvent nous être remis en mains propres (au refuge sur les heures d'ouverture), mais aussi par mail ou par courrier postal (adresse : 35 rue de Quesquello 44500 LA BAULE).
+                <br><br>
+                À la réception des formulaires, l’équipe du Radeau prendra contact avec vous afin d’échanger et de rencontrer le chien du refuge.
+            </p><br><br>
+            <a href="" class="btn_orange">Certificat d'adoption</a>
+            <br><br>
+        </div>
+        <div class="espaceur50"></div>
+        <div class="bloc_centre adopt_2column">
+            <img src="images/zzz (7).jpeg">
+            <p>
+                <strong><or>Etape  2 : Décision d'adoption</or></strong>
+                <br><br>
+                A ce stade du processus d'adoption, l'équipe du refuge se concerte afin de donner une réponse à la demande d'adoption; avec pour seul objectif, le bien-être et l'équilibre du chat à l'adoption.
+                <br><br>
+                Si la réponse est positive, vous pourrez revenir au refuge, afin de finaliser le contrat d'adoption.<br>
+                Vous devrez fournir les photocopies des justificatifs suivants :
+                <br><br>
+                Pièce d'identité<br>
+                Justificatif de domicile<br>
+                Règlement des frais d'adoption
+                <br><br>
+                Après l'adoption, aucun remboursement ne pourra être effectué; l'intégralité des sommes étant destinée au fonctionnement du refuge et à l'entretien des animaux hébergés.
+
+            </p>
+            
+        </div>
+        <div class="espaceur30"></div>
+        <div class="bloc_centre adopt_text">
+            <p>
+                Si vous adoptez un chaton, la stérilisation est obligatoire à l'âge de 6 mois et est à la charge de l'adoptant.<br>
+                L'objectif est de limiter la reproduction afin de réduire le nombre d'animaux abandonnés
+            </p>
+        </div>
+        <div class="espaceur100"></div>
+
+
+
+
+
+
+
+
+
+
     </div>
     <footer>
         <div class="logo">
