--- a/qui-nous-sommes.html
+++ b/qui-nous-sommes.html
@@ -112,6 +112,7 @@
                 Il n'y a aucun salarié parmi l'équipe du Radeau des animaux.
             </p>
         </div>
+        <div class="espaceur50"></div>
         <div class="bloc_centre qui_texte3">
             <p>
                 Le RADEAU DES ANIMAUX est membre de la Confédération Nationale de défense de l'animal qui fédère 260 refuges. 
