--- a/chats.html
+++ b/chats.html
@@ -229,7 +229,7 @@
 
     </div>
     <footer>
-        <div class="logo">
+        <div class="logo logo_footer">
             <a href="#">
             <img src="images/Logo.webp" class="logo_img"/>
             </a>
