--- a/radeaudesanimaux.html
+++ b/radeaudesanimaux.html
@@ -313,7 +313,7 @@
 
 
     <footer>
-        <div class="logo">
+        <div class="logo logo_footer">
             <a href="#">
             <img src="images/Logo.webp" class="logo_img"/>
             </a>
