--- a/notre-histoire.html
+++ b/notre-histoire.html
@@ -73,7 +73,7 @@
         <p>Ceci est le contenu de la page</p>
     </div>
     <footer>
-        <div class="logo">
+        <div class="logo logo_footer">
             <a href="#">
             <img src="images/Logo.webp" class="logo_img"/>
             </a>
