--- a/qui-nous-sommes.html
+++ b/qui-nous-sommes.html
@@ -199,7 +199,7 @@
 
     </div>
     <footer>
-        <div class="logo">
+        <div class="logo logo_footer">
             <a href="#">
             <img src="images/Logo.webp" class="logo_img"/>
             </a>
