--- a/chiens.html
+++ b/chiens.html
@@ -112,7 +112,7 @@
                 N'hésitez pas à le consulter
             </p>
             <br>
-            <a href="https://www.radeaudesanimaux.fr/conditions-dadoption" class="btn_orange">VOIR LE PROCESSUS D'ADOPTION</a>
+            <a href="processus-adoption.html" class="btn_orange">VOIR LE PROCESSUS D'ADOPTION</a>
         </div>
         <div class="espaceur50"></div>
         <div class="bloc_centre chien_texte4">
