--- a/temoignages-adoptants.html
+++ b/temoignages-adoptants.html
@@ -93,7 +93,7 @@
         </div>
         <div class="temoin_textes">
             <div class="temoin_img_textes">
-                <img src="images/rda(38).webp" id="mairie">
+                <img src="images/rda(38).webp" >
             </div>
             <div class="temoignage_texte">
                 <h2>Thalia, Paco</h2>
@@ -109,7 +109,7 @@
         </div>
         <div class="temoin_textes">
             <div class="temoin_img_textes">
-                <img src="images/rda(37).webp" id="veto">
+                <img src="images/rda(37).webp" >
             </div>
             <div class="temoignage_texte">
                 <h2>Gigi</h2>
