menu + btn à jour

--- a/chats.html
+++ b/chats.html
@@ -12,7 +12,7 @@
             ☰
         </button>
         <ul class="menu">
-            <li><a href="radeaudesanimaux.html">
+            <li><a href="index.html">
             <img src="images/Logo.webp" class="logo_img"/></a>
             </li>
             <li>
@@ -136,7 +136,7 @@
                 <img src="images/icone1.png" class="chien_pic"/>
                 <h3>Vous voulez adopter?</h3>
                 <br>
-                <a href="" class="btn_bleu">Demande Adoption</a>
+                <a href="https://cdn.website-editor.net/s/871168e79a69454aa14f8185a62058b2/files/uploaded/Demande_d-adoption_CHAT.pdf?Expires=1770051078&Signature=E5TkI8Fj9mfLGkDuOGSIPnzGKxC7QPT0R591Eot4fz4PqS~GlgaTUO1sSEXd~JLt9JdvCcXgZhx3aOX1wq9v~oiZZHUESoak67FHntPfnKWXh-6EjGe6agJCjFtnl~u1bq8NOSdXjYsGhYMqqJgYx12BAAMQps1vySrDLjcRIy7FfYeFUyO9WX7bGr1w8Fm7wrXnPc-vkTWRMcfc91hPfEQo5YLrf5UYghgZjMbytWibmwsbfpZJfJLhH0k7R-NZAls-aXUxTwsQEQAUEQ0J391f3vvkEew33MDG-hnV3IjNWjGUZag2SNs-AuzCVCC39umXUS~5Df78WxkB8SNeGg__&Key-Pair-Id=K2NXBXLF010TJW" class="btn_bleu">Demande Adoption</a>
                 <br><br>
                 <p>Prenez en compte le certificat d'engagement et de connaissances d’adoption d'un chat pour y parvenir.</p>
             </div>
@@ -144,7 +144,7 @@
                 <img src="images/icone6.png" class="chien_pic"/>
                 <h3>Certificat d'engagement</h3>
                 <br>
-                <a href="" class="btn_bleu">Certificat</a>
+                <a href="documents/Certificat-engagement-chat" download class="btn_bleu">Certificat</a>
                 <br><br>
                 <p>
                     Ce document est obligatoire. <br>
