--- a/chiens.html
+++ b/chiens.html
@@ -12,7 +12,7 @@
             ☰
         </button>
         <ul class="menu">
-            <li><a href="radeaudesanimaux.html">
+            <li><a href="index.html">
             <img src="images/Logo.webp" class="logo_img"/></a>
             </li>
             <li>
@@ -132,7 +132,7 @@
                 <img src="images/icone15.png" class="chien_pic"/>
                 <h3>Vous voulez adopter?</h3>
                 <br>
-                <a href="" class="btn_bleu">Demande Adoption</a>
+                <a href="documents/Questionnaire-adoption-chien" download class="btn_bleu">Demande Adoption</a>
                 <br><br>
                 <p>Prenez en compte le certificat d'engagement et de connaissances d’adoption d'un chien pour y parvenir.</p>
             </div>
@@ -140,7 +140,7 @@
                 <img src="images/icone6.png" class="chien_pic"/>
                 <h3>Certificat d'engagement</h3>
                 <br>
-                <a href="" class="btn_bleu">Certificat</a>
+                <a href="documents/Certificat-engagement-chien.doc" download class="btn_bleu">Certificat</a>
                 <br><br>
                 <p>
                     Ce document est obligatoire. <br>
