--- a/processus-adoption.html
+++ b/processus-adoption.html
@@ -12,7 +12,7 @@
             ☰
         </button>
         <ul class="menu">
-            <li><a href="radeaudesanimaux.html">
+            <li><a href="index.html">
             <img src="images/Logo.webp" class="logo_img"/></a>
             </li>
             <li>
@@ -159,7 +159,7 @@
                 </strong>
             </p>
             <br><br>
-            <a href="" class="btn_orange">Certificat d'engagement</a>
+            <a href="documents/Certificat-engagement-chien.doc" download class="btn_orange">Certificat d'engagement</a>
             <br><br>
             <p><or>
                 En savoir plus sur le certificat d’engagement et de connaissances 
@@ -248,7 +248,7 @@
                 <br><br>
                 À la réception des formulaires, l’équipe du Radeau prendra contact avec vous afin d’échanger et de rencontrer le chien du refuge.
             </p><br><br>
-            <a href="" class="btn_orange">Certificat d'adoption</a>
+            <a href="documents/Certificat-engagement-chat" download class="btn_orange">Certificat d'adoption</a>
             <br><br>
         </div>
         <div class="espaceur50"></div>
