--- a/contrat-adoption.html
+++ b/contrat-adoption.html
@@ -12,7 +12,7 @@
             ☰
         </button>
         <ul class="menu">
-            <li><a href="radeaudesanimaux.html">
+            <li><a href="index.html">
             <img src="images/Logo.webp" class="logo_img"/></a>
             </li>
             <li>
