--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             ☰
         </button>
         <ul class="menu">
-            <li><a href="radeaudesanimaux.html">
+            <li><a href="index.html">
             <img src="images/Logo.webp" class="logo_img"/></a>
             </li>
             <li>
