--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Le Radeau des Animaux</title>
     <link rel="stylesheet" href="radeaudesanimaux.css">
 </head>
 <body>
